# adventofcode

./: pyproject.toml
2024/05/: run.py
2024/06/: run.py
2024/07/: run.py
2024/08/: run.py
